Song Details Assignment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <title>Song Details</title>
+  </head>
+  <body>
+    <div id="song-details"> 
+      <img src="./images/microphone.gif" />
+      <h1 id="song-title"><strong>Don't Stop Me Now</strong></h1>
+      <h3 id="song-author">&copy; 1978 Queen</h3>
+  <div style="background-color: red;">
+  <p style="background:lightblue"><i>Tonight I'm gonna have myself a real good time I feel alive</i></p>
+  <img 
+  src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png"></img>
+  <p style="background:lightblue"><i>And the world I'll turn it inside out, yeah</i></p>
+<hr id="thematicBreak" />
+<p id="hidden-paragraph" hidden>You can't see me</p>
+</div>
+    </div>
+  </body>
 </html>
